On the road to 2026.01:
defaults:
- added all supported firmware files to _GRAPHIC_IGNORE list
clock:
- added 10 seconds timeout for _ZONE detection
container:
- fixed clean cache function
launcher:
- added Cosmic desktop environment
login:
- added 30 second timeout to download autorun.sh
sway:
- fixed keyboard layout on sway startup
pacsetup:
- added 10 seconds timeout on geoip and mirrorlist fetching
update:
- lowered requirement of package cache inclusion on 
  new environment routine to 3G RAM
- highered requirement of creation of new images routine to 5.5G RAM
- added autodetection of firmware packages on new environment routine
- added all supported firmware packages in new images routine
- added 10 seconds timeout on geoip and mirrorlist fetching
---
Highlights 2025.12:
- kernel 6.18.x
- systemd 259.x 
- updated IPXE to 20251230
- fedora shim 16.1-5
Environment:
- added netshaper binary
- removed efi_pstore values from modprobe.conf
- added XDG_SESSION_TYPE=wayland to tty1 systemd service file
- retrigger udev events before starting desktop environment
defaults:
- increased ZRAM disk size to 6G to fit for full system and gnome desktop
network:
- ensure same persistent names for network devices
setup/quickinst:
- fixed pacman CACHEDIR creation
tarball:
- disable alpm DownloadUser on container tarball
---
Highlights 2025.11:
- updated IPXE to 20251101
- added phy network modules
- added mfd modules
- removed runcon and chcon
defaults:
- removed linux-firmware packages from _PACKAGE array
detect-vconsole:
- add timeout accordingly to fit to cpio detection method
setup:
- fixed firmware autodetection
- fixed autodetection of additional packages to install
- reenable microcode mkinitcpio hook on aarch64
- fixed mkinitcpio run on aarch64
- removed mkinitcpio fallback, disabled by default now
Highlights 2025.10:
Environment:
- kernel 6.17.x
- updated IPXE to 20251001
- fixed bash history escape sequence MR #1
firmware:
- removed aeonsemi, dell, HP, and Lenovo