@@ -5,10 +5,10 @@
 _run ()
 {
     tar -C / --exclude=lib/firmware/{3com,acenic,advansys,aeonsemi,agere_*,adaptec,airoha,amd-ucode,amdtee,amlogic,amphion,ar3k,ar5523*,ar70*,ar9[0-9]*,arm,as102*,\
-ath3k*,atmel,atusb,av7110,bmi260*,brcm,cadence,carl*,cavium,cirrus,cis,cpia2,cnm,cs42l43*,ct*,cxgb*,cmmb*,cypress,dabusb,dpaa2,dell,dsp56k,dvb*,e100,\
+ath3k*,atmel,atusb,av7110,bmi260*,cadence,carl*,cavium,cirrus,cis,cpia2,cnm,cs42l43*,ct*,cxgb*,cmmb*,cypress,dabusb,dpaa2,dell,dsp56k,dvb*,e100,\
 edgeport,emi26,emi62,ene-ub6250,ess,f2255usb*,go7007,hfi1*,HP,INT*,imx,inside-secure,isci,isdbt*,intel{-ucode,},ixp4xx,kaweth,keyspan*,\
 korg,lbtf*,LENOVO,lgs8g75*,lt9611uxc*,matrox,meson,microchip,moxa,mrvl/prestera,mts*,myri10ge*,myricom,nxp,ositech,phanfw*,powervr,qat*,\
-qca,r128,r8a*,realtek,rockchip,rp2*,rtl_bt,rsi*,sb16,s2250*,s5p-*,sdd_*,slicoss,sms1*,sun,sxg,tdmb*,ttusb-budget,ueagle-atm,usbdux*,\
+qca,r128,r8a*,realtek,rockchip,rp2*,rtl_bt,rsi*,sb16,s2250*,s5p-*,sdca,sdd_*,slicoss,sms1*,sun,sxg,tdmb*,ttusb-budget,ueagle-atm,usbdux*,\
 TAS*,TIAS*,TXNW2781*,tehuti,ti,ti_*,ti-keystone,tlg2300*,tsse_*,v4l*,vicam,vntw*,vxge,wsm_*,wfx,whiteheat*,yam,yamaha} \
 --hard-dereference -cpf - lib/firmware 2>"${_NO_LOG}" | tar -C "${_ROOTFS}" -xpf - 2>"${_NO_LOG}"
     # add iwlwifi firmware
