@@ -167,6 +167,9 @@ _initrd_stage() {
                 _FW_RUN+=("${i}")
             done
         fi
+        if rg "${_WIFI}" "${_PCI}" | rg -q 'Broadcom'; then
+            _FW_RUN+=("${_FW}/brcm.img")
+        fi
         if rg "${_WIFI}" "${_PCI}" | rg -q 'Intel'; then
             rg -q intel <<<"${_FW_RUN[@]}" || _FW_RUN+=("${_FW}/intel.img")
             _FW_RUN+=("${_FW}/iwlwifi.img")
